--- a/Sandy.Main/Areas/Admin/Views/CompanyProfileManagement/AddCompanyProfile.cshtml
+++ b/Sandy.Main/Areas/Admin/Views/CompanyProfileManagement/AddCompanyProfile.cshtml
@@ -23,12 +23,12 @@
         </div>
         <div class="form-group">
             @Html.LabelFor(model=>model.Description, new { htmlAttributes = new { @class = "form-control" }})
-            @Html.TextAreaFor(model => model.Description, 5, 40, htmlAttributes: new  { @class = "form-control" });
+            @Html.TextAreaFor(model => model.Description, 5, 40, htmlAttributes: new  { @class = "form-control" })
         </div>
     </div>
     <div class="card-footer">
         <button type="submit" class="btn btn-primary default-button-size">Save</button>
-        <button type="button" class="btn btn-secondary default-button-size">Cancel</button>
+        <button type="button" class="btn btn-secondary default-button-size">Clear</button>
     </div>
 
 }
