--- a/Sandy.Main/Views/Recruiter/Index.cshtml
+++ b/Sandy.Main/Views/Recruiter/Index.cshtml
@@ -7,10 +7,12 @@
 }
 
 
-<a class="btn btn-primary default-button-size fa-pull-left" asp-action="AddRecruiterDetail"><i class="fa fa-plus"></i>Add</a>
-<a class="btn btn-primary default-button-size fa-pull-right" asp-action="AddRecruiterDetail"><i class="fa fa-plus"></i>Add</a>
+<div class="card-footer">
+    <a class="btn btn-primary default-button-size" asp-action="SendRecruiterEmail">Send Email</a>
+    <a class="btn btn-primary" asp-action="BroadcastEmail">Broadcast Email</a>
+    <a class="btn btn-primary default-button-size fa-pull-right" asp-action="AddRecruiterDetail">Add Recruiter</a>
+</div>
 <hr />
-
 <table id="tblcompanyProfile" class="table table-striped table-bordered" style="width:100%">
     <thead>
         <tr>
